--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,13 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     - run: ls
+    - run: nix-build - A regolith-ilia
+    - run: nix-build - A regolith-rofication
+    - run: nix-build - A regolith-remontoire
+    - run: nix-build - A regolith-powerd
+    - run: nix-build - A regolith-inputd
+    - run: nix-build - A regolith-disiplayd
     - run: nix-build 
+
     
     
