--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
     - run: nix-build -A regolith-powerd
     - run: nix-build -A regolith-inputd
     - run: nix-build -A regolith-displayd
+    - run: nix-build -A i3xrocks
     - run: nix-build 
 
     
