--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,17 @@
-# name: "Test"
-# on:
-#   pull_request:
-#   push:
-# jobs:
-#   tests:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v3
-#     - uses: cachix/install-nix-action@v22
-#       with:
-#         nix_path: nixpkgs=channel:nixos-unstable
-#     - run: ls
-#     - run: nix-build -A ilia
-#     - run: nix-build -A rofication
-#     - run: nix-build -A remontoire
-#     - run: nix-build -A regolith-powerd
-#     - run: nix-build -A regolith-inputd
-#     - run: nix-build -A regolith-displayd
-#     - run: nix-build -A i3xrocks
-#     - run: nix-build 
+name: "Test"
+on:
+  pull_request:
+  push:
+jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: cachix/install-nix-action@v22
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - run: ls
+    - run: nix develop
 
     
     
